# fastapi-tdd-docker

./: .dockerignore  .environment  .gitignore  .platform.app.yaml  .pre-commit-config.yaml  .pylintrc  Dockerfile.prod  README.md  fastapi-tdd.yaml  pyproject.toml
.platform/: routes.yaml  services.yaml
project/: .pylintrc  Dockerfile  Dockerfile.prod  entrypoint.sh  pyproject.toml  requirements.txt
project/app/: main.py
project/app/api/: summaries.py
project/tests/: conftest.py  test_summaries.py
tests/: test_summaries.py
